terraform/Eks/internetgateway.tf
# internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    Name = "vpc_igw"
  }
}
